--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        background-color: #1c0d00;
+        background-color: black;
         color: white;
         margin: 10px 80px;
       }
