--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div>
       <h2>Where?</h2>
-      If you are interesting in seeing current progress, there are two GitHub repositories you may be interested in.
+      If you are interested in seeing current progress, there are two GitHub repositories you may be interested in.
       <ul>
         <li>The Hoot app itself can be found at <a target="_blank" href="https://github.com/chakanysystems/hoot-app">chakanysystems/hoot-app</a></li>
         <li>yandk is the framework that backs hoot's communication with the nostr network. it can be found at <a target="_blank" href="https://github.com/chakanysystems/yandk">chakanysystems/yandk</a></li>
